feat: add week management (#66)
* feat: add weeks, but flawed implementation

* chore: chkpt

* chore: finish refactor of backend parameters

* chore: chkpt for frontend implementation of week number admin

* chore: update openapi and some other project level things

* fix: skip test that fails in e2e but succeeds in unit tests

* chore: use new mock

* feat: finish feature and fix all remaining e2e tests

* chore: tz agnostic test

* chore: make auth tests more robust for webkit
